# GNUMach_SMP

./: .gitignore  =announce-1.0  =announce-1.1  =announce-1.1.1  =announce-1.2  =announce-1.3  AUTHORS  ChangeLog  ChangeLog.0  ChangeLog.00  DEVELOPMENT  Drivers.macros  Makefile  Makefile.am  Makefile.correct_output_files_for_.S_files.patch  Makefile.in  Makefile.in.orig  Makefile.in.rej  Makefrag.am  Makerules.am  Makerules.in  Makerules.mig.am  NEWS  README  README.md  aclocal.m4  assigns  config.h.in  config.status.dep.patch  configfrag-first.ac  configfrag.ac  configure  configure.ac  configure.in  cpu_number.c  gensym.awk  version.c  version.c.in  version.m4
i386/: Drivers.in  Files  Makefile.in  Makefrag  Makefrag.am  Makefrag_x86.am  Makerules.in  README-Drivers  Subdirs  configfrag.ac  configure  configure.in  device-drivers.h.in  driverlist.in  ldscript
i386/bogus/: com.h  fpe.h
i386/grub/: glue.h  i18n.h  misc.h
i386/i386/: .gitignore  apic.c  apic.h  ast.h  ast_check.c  copy_user.h  cpu.h  cpu_number.S  cpu_number.c  cpu_number.h  cpuboot.S  cswitch.S  db_disasm.c  db_interface.c  db_interface.h  db_machdep.h  db_trace.c  db_trace.h  debug.h  debug_i386.c  debug_trace.S  eflags.h  fpe_linkage.c  fpu.c  fpu.h  gdt.c  gdt.h  hardclock.c  hardclock.h  i386asm.sym  idt-gen.h  idt.c  idt_inittab.S  intel_startCPU.c  io_emulate.c  io_map.c  io_perm.c  io_perm.h  io_port.h  iopb.c  (+49 more)
i386/i386at/: acpi.c  acpi_parse_apic.c  acpi_parse_apic.h  acpi_rsdp.c  acpi_rsdp.h  acpihalt.c  acpihalt.h  autoconf.c  autoconf.h  biosmem.c  biosmem.h  blit.c  boothdr.S  com.c  com.h  comreg.h  conf.c  cons_conf.c  cram.h  disk.h  elf.h  fd.c  grub_glue.c  i386at_ds_routines.c  i8250.h  idt.h  if_de6c.c  if_de6c.h  if_de6s.S  immc.c  immc.h  int_init.c  int_init.h  interrupt.S  ioapic.c  iopl.c  kd.c  kd.h  kd_event.c  kd_event.h  (+16 more)
i386/i386at/gpl/linux/: linux_block.c  linux_init.c  linux_kmem.c
i386/i386at/gpl/linux/block/: genhd.c  triton.c
i386/i386at/gpl/linux/net/: 8390.c  Space.c  de600.c  de620.c  sk_g16.c  sk_g16.h
i386/i386at/gpl/linux/pci/: bios32.c  pci.c
i386/i386at/gpl/linux/scsi/: AM53C974.c  AM53C974.h  scsi.c  (+28 more)
i386/include/mach/i386/: asm.h  cthreads.h  disk.h  eflags.h  fp_reg.h  kern_return.h  mach_i386.defs  mach_i386_types.h  machine_types.defs  multiboot.h  stdint.h  syscall_sw.h  thread_status.h  trap.h  vm_param.h  vm_types.h
i386/include/mach/sa/: stdarg.h
i386/intel/: pmap.c  pmap.h  read_fault.c  read_fault.h
i386/linux/: Drivers.in  Makefile.in  Makefrag.am  Makerules.in  configure  configure.ac  device-drivers.h.in
i386/linux/dev/include/: linux_emul.h
i386/pc/rv86/: gdt_sels.h
i386/xen/: Makefrag.am  xen.c  xen_boothdr.S  xen_locore.S
linux/: Files  Makefrag.am  Subdirs  configfrag.ac  configure  configure.in  dummy.in
linux/dev/: README
linux/dev/drivers/block/: ahci.c  floppy.c  genhd.c  ide-cd.c  ide.c
linux/dev/drivers/net/: Space.c  auto_irq.c  eepro100.c  net_init.c  wavelan.p.h
linux/dev/drivers/scsi/: aha152x.c  eata_dma.c  g_NCR5380.c  hosts.c  scsi.c  scsi.h  sd_ioctl.c  seagate.c
linux/dev/glue/: block.c  glue.h  kmem.c  misc.c  net.c
linux/dev/include/: ahci.h
linux/dev/include/asm-i386/: errno.h  page.h  segment.h  smp.h  string.h  system.h
linux/dev/include/linux/: blk.h  blkdev.h  compile.h  etherdevice.h  fs.h  genhd.h  head.h  if.h  kernel.h  locks.h  malloc.h  mm.h  netdevice.h  nfs.h  notifier.h  pagemap.h  proc_fs.h  sched.h  skbuff.h  types.h
linux/dev/init/: main.c  version.c
linux/dev/kernel/: dma.c  printk.c  resource.c  sched.c  softirq.c
linux/dev/lib/: vsprintf.c
linux/dev/net/core/: dev.c
linux/pcmcia-cs/clients/: 3c574_cs.c  3c589_cs.c  ax8390.h  axnet_cs.c  fmvj18x_cs.c  nmclan_cs.c  pcnet_cs.c  smc91c92_cs.c  xirc2ps_cs.c
linux/pcmcia-cs/glue/: ds.c  pcmcia.c  pcmcia_glue.h  wireless_glue.h
linux/pcmcia-cs/include/linux/: crc32.h  init.h  slab.h
linux/pcmcia-cs/include/pcmcia/: ds.h  mem_op.h  version.h
linux/pcmcia-cs/modules/: bulkmem.c  cirrus.h  cistpl.c  cs.c  cs_internal.h  ds.c  ene.h  i82365.c  o2micro.h  pci_fixup.c  ricoh.h  rsrc_mgr.c  smc34c90.h  ti113x.h  topic.h  vg468.h
linux/pcmcia-cs/wireless/: orinoco.c  orinoco_cs.c
linux/src/drivers/block/: floppy.c  genhd.c  ide-cd.c  ide.c  ide.h  triton.c
linux/src/drivers/net/: 3c503.c  3c505.c  3c505.h  3c507.c  3c509.c  3c515.c  3c59x.c  8390.c  Space.c  ac3200.c  apricot.c  at1700.c  auto_irq.c  cb_shim.c  de4x5.c  de600.c  de620.c  depca.c  e2100.c  eepro.c  eepro100.c  eexpress.c  epic100.c  eth16i.c  ewrk3.c  fmv18x.c  hamachi.c  hp-plus.c  hp.c  hp100.c  hp100.h  intel-gige.c  kern_compat.h  lance.c  myson803.c  natsemi.c  ne.c  ne2k-pci.c  net_init.c  ni52.c  (+21 more)
linux/src/drivers/pci/: pci.c
linux/src/drivers/scsi/: 53c7,8xx.h  53c78xx.c  AM53C974.c  AM53C974.h  BusLogic.c  BusLogic.h  FlashPoint.c  NCR5380.c  NCR5380.h  NCR53c406a.c  advansys.c  advansys.h  aha152x.c  aha152x.h  aha1542.c  aha1542.h  aha1740.c  aha1740.h  aic7xxx.c  aic7xxx.h  aic7xxx_proc.c  dc390.h  dc390w.h  dtc.c  eata.c  eata_dma.c  eata_dma_proc.c  eata_pio.c  fdomain.c  fdomain.h  g_NCR5380.c  g_NCR5380.h  gdth.c  gdth.h  gdth_ioctl.h  gdth_proc.c  gdth_proc.h  hosts.c  hosts.h  in2000.c  (+35 more)
linux/src/include/asm-i386/: atomic.h  bitops.h  dma.h  floppy.h  hardirq.h  io.h  ioctl.h  irq.h  posix_types.h  processor.h  ptrace.h  segment.h  semaphore.h  spinlock.h  system.h  termios.h  unistd.h  vm86.h
linux/src/include/linux/: ax25.h  blk.h  blkdev.h  compatmac.h  compiler-gcc.h  compiler.h  fs.h  genhd.h  hdreg.h  if_arp.h  inet.h  init.h  interrupt.h  ioport.h  ip.h  kcomp.h  kernel.h  list.h  major.h  md.h  mm.h  module.h  mount.h  netdevice.h  nfs.h  pci.h  personality.h  proc_fs.h  quota.h  rose.h  sched.h  skbuff.h  socket.h  spinlock.h  stddef.h  string.h  tasks.h  tqueue.h  tty.h  types.h  (+3 more)
linux/src/include/net/: ax25.h  netrom.h  rose.h  route.h  slhc_vj.h  sock.h
linux/src/include/scsi/: scsi.h  scsi_ioctl.h
linux/src/init/: main.c
linux/src/kernel/: dma.c  resource.c  sched.c  softirq.c
linux/src/net/core/: dev.c
(+495 files in other folders)
