dnl Configure script for i386
dnl Copyright 1999, 2004, 2006 Free Software Foundation, Inc.

dnl Permission to use, copy, modify and distribute this software and its
dnl documentation is hereby granted, provided that both the copyright
dnl notice and this permission notice appear in all copies of the
dnl software, derivative works or modified versions, and any portions
dnl thereof, and that both notices appear in supporting documentation.
dnl
dnl THE FREE SOFTWARE FOUNDATION ALLOWS FREE USE OF THIS SOFTWARE IN ITS
dnl "AS IS" CONDITION.  THE FREE SOFTWARE FOUNDATION DISCLAIMS ANY
dnl LIABILITY OF ANY KIND FOR ANY DAMAGES WHATSOEVER RESULTING FROM THE
dnl USE OF THIS SOFTWARE.


m4_include([../version.m4])

AC_INIT([PACKAGE], [VERSION], [bug-hurd@gnu.org], [gnumach])
AC_CONFIG_SRCDIR([i386/i386asm.sym])
AC_PREREQ(2.57)

#
# Options
#
AC_ARG_ENABLE([lpr],
AS_HELP_STRING([--enable-lpr], [enable use of lpr device]),
[test "x$enableval" = xno || AC_DEFINE([MACH_LPR], [], [enable mach lpr])])

AC_CONFIG_SUBDIRS([linux])

AC_CONFIG_FILES([Makefile Makerules])
AC_OUTPUT
